--- a/index.html
+++ b/index.html
@@ -10,268 +10,8 @@
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      background-color: #e9edf2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 400px;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      overflow: hidden;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 16px 20px;
-      border-bottom: 1px solid #eee;
-    }
-
-    .favorite-btn {
-      font-size: 1.5rem;
-      cursor: pointer;
-      color: #ccc;
-      transition: color 0.2s;
-      background: none;
-      border: none;
-      padding: 0;
-    }
-
-    .favorite-btn.favorited {
-      color: #FFD700;
-    }
-
-    .content {
-      padding: 20px;
-    }
-
-    .station-title {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 4px;
-      color: #222;
-      text-align: center;
-    }
-
-    .station-desc {
-      font-size: 14px;
-      color: #777;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    .show-image {
-      position: relative;
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin-bottom: 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #f5f5f5;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      margin: 0 auto;
-      transition: box-shadow 0.3s ease;
-    }
-
-    .show-image.favorited-cover {
-      box-shadow: 0 0 15px 5px #FFD700, 0 4px 12px rgba(0,0,0,0.08);
-    }
-
-    .show-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 2px solid #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-
-    .show-info {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .live-indicator {
-      font-size: 12px;
-      color: #000;
-      margin-bottom: 4px;
-    }
-
-    .show-title {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 4px;
-      color: #222;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-    }
-
-    .show-date {
-      font-size: 14px;
-      color: #555;
-    }
-
-    .play-button {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      background-color: #FF6600;
-      color: white;
-      font-size: 16px;
-      font-weight: bold;
-      text-align: center;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.2s;
-      margin-bottom: 16px;
-    }
-
-    .play-button:hover {
-      background-color: #e65c00;
-    }
-
-    .volume-control {
-      margin-bottom: 20px;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .volume-slider {
-      flex: 1;
-      height: 4px;
-      -webkit-appearance: none;
-      background: #ddd;
-      border-radius: 2px;
-      outline: none;
-    }
-
-    .volume-slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      background: #FF6600;
-      cursor: pointer;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    .history-section {
-      margin-top: 24px;
-      padding-top: 16px;
-      border-top: 1px solid #eee;
-    }
-
-    .history-title {
-      font-size: 1rem;
-      color: #aaa;
-      margin-bottom: 12px;
-      font-weight: 600;
-    }
-
-    .history-list {
-      max-height: 200px;
-      overflow-y: auto;
-      scrollbar-width: none;
-    }
-
-    .history-list::-webkit-scrollbar {
-      display: none;
-    }
-
-    .history-item {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 8px;
-      background: #f9f9f9;
-      transition: background 0.2s;
-    }
-
-    .history-item:hover {
-      background: #f0f0f0;
-    }
-
-    .history-img {
-      width: 40px;
-      height: 40px;
-      border-radius: 6px;
-      background: #e0e0e0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1rem;
-      color: #888;
-    }
-
-    .history-img img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .history-text {
-      flex: 1;
-    }
-
-    .history-title-item {
-      font-size: 0.9rem;
-      font-weight: 600;
-      color: #222;
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .history-artist {
-      font-size: 0.8rem;
-      color: #777;
-    }
-
-    .status {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #888;
-      margin-top: 16px;
-    }
-
-    .sr-only {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      padding: 0;
-      margin: -1px;
-      overflow: hidden;
-      clip: rect(0,0,0,0);
-      border: 0;
-    }
-  </style>
+    <link rel="stylesheet" href="style.css"> 
+  
 </head>
 <body>
   <div class="container">
@@ -317,12 +57,11 @@
 
     <audio id="radioPlayer" preload="auto" aria-hidden="true"></audio>
 
-  <script>
+    <script>
     // 🔑 Configurações
     const STREAM_URL = 'https://stream.zeno.fm/olisuxy9v3vtv'; 
     const NOWPLAYING_API = 'https://api.zeno.fm/mounts/metadata/subscribe/olisuxy9v3vtv'; 
     const LASTFM_API_KEY = '3ce134e4f02accfff4367ada927e6dcd'; 
-    // SEU LINK RAW DO GITHUB (com fundo transparente e "Louvor e Adoração" na imagem)
     const STREAM_LOGO_URL = 'https://raw.githubusercontent.com/webradiosagradafm/radiosagradafm/main/imagem/Logo%20Praise%20FM%20Brasil.png';
     
     const player = document.getElementById('radioPlayer');
@@ -344,7 +83,6 @@
     let currentSong = '';
     let currentArtist = '';
 
-    // 👈 Correção: Atribua crossOrigin ANTES do src
     player.crossOrigin = 'anonymous'; 
     player.src = STREAM_URL;
     player.volume = volumeSlider.value;
@@ -354,7 +92,6 @@
       playBtn.setAttribute('aria-label', playing ? 'Pausar o stream' : 'Reproduzir o stream');
     }
 
-    // A tentativa de play inicial é para cumprir a política de autoplay
     player.play().then(() => {
       playing = true;
       updatePlayButton();
@@ -386,7 +123,6 @@
       statusText.textContent = `Volume: ${Math.round(player.volume * 100)}%`;
     });
 
-    // Horário de Brasília
     function updateTime() {
       const brasiliaTime = new Date().toLocaleString('pt-BR', { timeZone: 'America/Sao_Paulo' });
       const brasiliaDate = new Date(brasiliaTime);
@@ -450,7 +186,6 @@
         `;
       }).join('');
 
-      // Adiciona listeners (incluindo keydown para acessibilidade)
       document.querySelectorAll('.favorite-history').forEach(el => {
         el.addEventListener('click', (e) => {
           e.stopPropagation();
@@ -516,7 +251,6 @@
       }
     });
 
-    // Função para detectar spots/comerciais
     function isCommercial(title) {
       const keywords = [
         'commercial', 'advertisement', 'sponsor', 'spot', 'publicidade', 'intervalo', 'break', 'jingle', 'comercial', 'anúncio', 'patrocínio'
@@ -525,9 +259,7 @@
       return keywords.some(k => lower.includes(k));
     }
 
-    // Função para buscar capa (agora retorna STREAM_LOGO_URL em caso de falha, genérico ou sem capa)
     function fetchCoverArt(artist, song) {
-      // Caso 1: Spot/Genérico - Retorna o logo
       if (!artist || !song || isCommercial(song) || artist === 'Praise FM Brasil' || song === 'Streaming Live') {
           return Promise.resolve(STREAM_LOGO_URL); 
       }
@@ -540,13 +272,13 @@
           if (data.track?.album?.image) {
             const images = data.track.album.image;
             const cover = images.find(img => img.size === 'extralarge') || images[images.length - 1];
-            return cover['#text'] || ''; // Retorna URL ou string vazia (música sem capa)
+            return cover['#text'] || '';
           }
-          return ''; // Caso 2: Last.fm não encontrou uma capa (música sem capa)
+          return '';
         })
         .catch(err => {
           console.warn('Falha ao buscar capa:', err);
-          return STREAM_LOGO_URL; // Caso 3: Erro de rede/API, retorna o logo
+          return STREAM_LOGO_URL;
         });
     }
 
