--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
         <div class="content">
             <div class="station-title">Praise FM Brasil</div>
-            <div class="station-desc">Música Cristã & Louvor 24/7</div>
+            <div class="station-desc">Louvor e Adoração</div>
 
             <div class="show-image" id="showImage">
                 <img id="coverImg" src="" alt="Capa da música atual" /> 
@@ -720,3 +720,4 @@
     </script>
 </body>
 </html>
+
