--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Adorção<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8" />
@@ -318,7 +318,7 @@
 
         <div class="content">
             <div class="station-title">Praise FM Brasil</div>
-            <div class="station-desc">Música Cristã & Louvor 24/7</div>
+            <div class="station-desc">Louvor e adoração</div>
 
             <div class="show-image" id="showImage">
                 <img id="coverImg" src="" alt="Capa da música atual" /> 
@@ -709,3 +709,4 @@
     </script>
 </body>
 </html>
+
