--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Adorção<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8" />
@@ -318,7 +318,7 @@ Adorção<!DOCTYPE html>
 
         <div class="content">
             <div class="station-title">Praise FM Brasil</div>
-            <div class="station-desc">Louvor e adoração</div>
+            <div class="station-desc">Louvor e Adoração</div>
 
             <div class="show-image" id="showImage">
                 <img id="coverImg" src="" alt="Capa da música atual" /> 
@@ -709,4 +709,3 @@ Adorção<!DOCTYPE html>
     </script>
 </body>
 </html>
-
