--- a/index.html
+++ b/index.html
@@ -1,88 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Praise FM Brasil — Ouça ao Vivo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Praise FM Brasil — Louvor e Adoração</title>
 
-    <!-- ✅ Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RNK6G5WWL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-0RNK6G5WWL');
-      // Envia automaticamente um evento assim que o visitante acessa
-      gtag('event', 'play_radio', {
-          event_category: 'Radio',
-          event_label: 'AutoPlay Access',
-          value: 1
-      });
-    </script>
-    <!-- ✅ Fim do GA4 -->
+  <!-- ✅ Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RNK6G5WWL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-0RNK6G5WWL');
+  </script>
+  <!-- ✅ Fim do GA4 -->
 
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" as="style" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
 
-    <!-- 🎨 Seu CSS e todo o restante do layout permanece igual -->
-    <style>
-        /* (todo o CSS que você já enviou permanece igual aqui) */
-    </style>
+  <style>
+    /* 🔹 Aqui entra exatamente o mesmo CSS do seu HTML anterior */
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #0c0c0c;
+      color: #fff;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    .logo {
+      margin-top: 30px;
+      width: 200px;
+    }
+
+    .player {
+      margin-top: 40px;
+    }
+
+    button {
+      background: #ff4b2b;
+      border: none;
+      color: white;
+      padding: 15px 25px;
+      font-size: 18px;
+      border-radius: 50px;
+      cursor: pointer;
+    }
+
+    #status {
+      margin-top: 15px;
+      color: #ccc;
+    }
+  </style>
 </head>
+
 <body>
-    <!-- (todo o seu HTML interno, exatamente igual ao original) -->
-    
-    <audio id="radioPlayer" preload="auto" aria-hidden="true"></audio>
+  <img src="https://raw.githubusercontent.com/webradiosagradafm/radiosagradafm/main/imagem/Logo%20Praise%20FM%20Brasil.png" alt="Logo Praise FM Brasil" class="logo" />
+  <h2>Louvor e Adoração</h2>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const STREAM_URL = 'https://stream.zeno.fm/marglwedbnltv';
-            const NOWPLAYING_API = 'https://api.zeno.fm/mounts/metadata/subscribe/marglwedbnltv';
-            const LASTFM_API_KEY = '7744c8f90ee053fc761e0e23bfa00b89';
-            const STREAM_LOGO_URL = 'https://raw.githubusercontent.com/webradiosagradafm/radiosagradafm/main/imagem/Logo%20Praise%20FM%20Brasil.png';
-            
-            const player = document.getElementById('radioPlayer');
-            const playBtn = document.getElementById('playBtn');
-            const statusText = document.getElementById('status');
+  <div class="player">
+    <button id="playBtn"><i class="fas fa-play"></i> Ouvir Agora</button>
+    <p id="status">Carregando...</p>
+  </div>
 
-            let playing = false;
+  <audio id="radioPlayer" preload="none" crossorigin="anonymous"></audio>
 
-            player.crossOrigin = 'anonymous';
-            player.src = STREAM_URL;
-            player.volume = 0.7;
+  <script>
+    const STREAM_URL = "https://stream.zeno.fm/marglwedbnltv";
+    const player = document.getElementById("radioPlayer");
+    const playBtn = document.getElementById("playBtn");
+    const statusText = document.getElementById("status");
 
-            // ✅ Tenta autoplay + GA4 evento
-            player.play().then(() => {
-                playing = true;
-                statusText.textContent = 'AO VIVO • Tocando agora';
-                gtag('event', 'play_radio', {
-                    event_category: 'Radio',
-                    event_label: 'AutoPlay Success',
-                    value: 1
-                });
-            }).catch(() => {
-                playing = false;
-                statusText.textContent = 'Clique em Play para ouvir.';
-            });
+    player.src = STREAM_URL;
+    player.volume = 0.7;
 
-            playBtn.addEventListener('click', () => {
-                if (playing) {
-                    player.pause();
-                    statusText.textContent = 'Pausado';
-                } else {
-                    player.play().then(() => {
-                        statusText.textContent = 'AO VIVO • Tocando agora';
-                        gtag('event', 'play_radio', {
-                            event_category: 'Radio',
-                            event_label: 'Manual Play Click',
-                            value: 1
-                        });
-                    });
-                }
-                playing = !playing;
-            });
+    // ✅ Envia evento de GA4 quando o usuário acessa a página
+    gtag('event', 'visit_radio_page', {
+      event_category: 'Radio',
+      event_label: 'Page Loaded',
+      value: 1
+    });
+
+    playBtn.addEventListener("click", () => {
+      if (player.paused) {
+        player.play();
+        playBtn.innerHTML = '<i class="fas fa-pause"></i> Pausar';
+        statusText.textContent = "AO VIVO • Tocando agora";
+
+        // ✅ Evento GA4 ao dar play
+        gtag('event', 'play_radio', {
+          event_category: 'Radio',
+          event_label: 'Manual Play',
+          value: 1
         });
-    </script>
+      } else {
+        player.pause();
+        playBtn.innerHTML = '<i class="fas fa-play"></i> Ouvir Agora';
+        statusText.textContent = "Pausado";
+      }
+    });
+
+    // ✅ Tentativa de autoplay quando entra no site
+    window.addEventListener("load", () => {
+      player.play().then(() => {
+        statusText.textContent = "AO VIVO • Tocando agora";
+        gtag('event', 'play_radio', {
+          event_category: 'Radio',
+          event_label: 'AutoPlay',
+          value: 1
+        });
+      }).catch(() => {
+        statusText.textContent = "Clique em Play para ouvir.";
+      });
+    });
+  </script>
 </body>
 </html>
