--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <div class="pfm-bar-shim" id="pfm-bar-shim"></div>
 
 <script>
-// Apenas o script do banner de localização (que depende do DOM e location) foi mantido aqui.
+// O script do banner de localização foi mantido aqui, pois é um script de UI síncrono e isolado.
 (function(){
   const STORAGE_KEY = "praisefm_locale_banner_closed_v2";
   const EXPIRE_DAYS = 30;
